# httpeek

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  cheatsheet.md  gitignore  httpeek.py  pyproject.toml  requirements.txt
includes/: __init__.py  headers.txt  http_check.py
scripts/: install.sh  release.sh  uninstall.sh
