[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httpeek"
version = "1.0.1"
description = "Practical HTTP checker: statuses, titles, sizes, redirects; optional TLS info; Cloudflare heuristics (DNS + headers)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Bayqus", email = "bayqus_sec@proton.com" }]
keywords = ["http", "recon", "security", "bugbounty", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP",
    "Environment :: Console"
]

dependencies = [
    "httpx>=0.27,<0.29",
    "beautifulsoup4>=4.12,<5",
    "rich>=13.7,<14",
    "dnspython>=2.4,<3"
]

[project.urls]
Homepage = "https://github.com/BAYQUS/httpeek"
Issues = "https://github.com/BAYQUS/httpeek/issues"

[project.scripts]
httpeek = "httpeek:main"

[tool.setuptools]
py-modules = ["httpeek"]
packages = ["includes"]
include-package-data = true
